--- a/quarto/basics/vectors.qmd
+++ b/quarto/basics/vectors.qmd
@@ -926,7 +926,7 @@ The latter using *splatting* to iterate over each value in `xs` and pass it to `
 
 A few reductions work with *predicate* functions---those that return `true` or `false`. Let's use `iseven` as an example, which tests if a number is even.
 
-We can check if *all* the alements of a container are even or if *any* of the elements of a container are even with `all` and `even`:
+We can check if *all* the elements of a container are even or if *any* of the elements of a container are even with `all` and `even`:
 
 ```{julia}
 xs = [1, 1, 2, 3, 5]
