--- a/quarto/differentiable_vector_calculus/matrix_calculus_notes.qmd
+++ b/quarto/differentiable_vector_calculus/matrix_calculus_notes.qmd
@@ -88,7 +88,7 @@ Vectors and matrices have properties that are generalizations of the real number
 
 * Viewing a vector as a matrix is possible. The association chosen here is common and is through a *column* vector.
 
-* The *transpose* of a matrix comes by permuting the rows and columns. The transpose of a column vector is a row vector, so $v\cdot w = v^T w$, where we use a  superscript $T$ for the transpose. The transpose of a product, is the product of the transposes---reversed: $(AB)^T = B^T A^T$; the tranpose of a transpose is an identity operation: $(A^T)^T = A$; the inverse of a transpose is the tranpose of the inverse: $(A^{-1})^T = (A^T)^{-1}$.
+* The *transpose* of a matrix comes by permuting the rows and columns. The transpose of a column vector is a row vector, so $v\cdot w = v^T w$, where we use a  superscript $T$ for the transpose. The transpose of a product, is the product of the transposes---reversed: $(AB)^T = B^T A^T$; the transpose of a transpose is an identity operation: $(A^T)^T = A$; the inverse of a transpose is the transpose of the inverse: $(A^{-1})^T = (A^T)^{-1}$.
 
 * Matrices for which $A = A^T$ are called symmetric.
 
@@ -133,7 +133,7 @@ The referenced notes identify $f'(x) dx$ as $f'(x)[dx]$, the latter emphasizing 
 
 We take the view that a derivative is a linear operator where $df = f(x+dx) + f(x) = f'(x)[dx]$.
 
-In writing $df = f(x + dx) - f(x) = f'(x)[dx]$ generically, some underlying facts are left implicit: $dx$ has the same shape as $x$ (so can be added)  and there is an underlying concept of distance and size that allows the above to be made rigorous. This may be an abolute value or a norm.
+In writing $df = f(x + dx) - f(x) = f'(x)[dx]$ generically, some underlying facts are left implicit: $dx$ has the same shape as $x$ (so can be added)  and there is an underlying concept of distance and size that allows the above to be made rigorous. This may be an absolute value or a norm.
 
 ##### Example: directional derivatives
 
