--- a/quarto/differentiable_vector_calculus/vectors.qmd
+++ b/quarto/differentiable_vector_calculus/vectors.qmd
@@ -1790,7 +1790,7 @@ plotly()
 nothing
 ```
 
-Parallelogram formed by two vectors $\vec{v}$ and $\vec{w}$. What is desription of red diagonal?
+Parallelogram formed by two vectors $\vec{v}$ and $\vec{w}$. What is a description of red diagonal?
 :::
 
 One diagonal is given by $\vec{v} + \vec{w}$. What is the other (as in the figure)?
