--- a/quarto/integrals/area_between_curves.qmd
+++ b/quarto/integrals/area_between_curves.qmd
@@ -118,7 +118,7 @@ p = let
 	# axis
 	plot!([(A,0),(B,0)]; axis_style...)
 
-	# hightlight
+	# highlight
 	x0, x1 = xp[marked], xp[marked+1]
 	_style = (;line=(:gray, 1, :dash))
 	plot!([(a,0), (a, f(a))]; _style...)
