--- a/quarto/integrals/ftc.qmd
+++ b/quarto/integrals/ftc.qmd
@@ -1247,7 +1247,7 @@ Why is $F'(x) = \text{erf}'(x)$?
 
 ```{julia}
 #| echo: false
-choices = ["The integrand is an *even* function so the itegral from ``0`` to ``x`` is the same as the integral from ``-x`` to ``0``",
+choices = ["The integrand is an *even* function so the integral from ``0`` to ``x`` is the same as the integral from ``-x`` to ``0``",
            "This isn't true"]
 radioq(choices, 1; keep_order=true)
 ```
