--- a/quarto/integrals/volumes_slice.qmd
+++ b/quarto/integrals/volumes_slice.qmd
@@ -493,7 +493,7 @@ plt = let
     gr()
 	# Follow lead of # https://github.com/SigurdAngenent/WisconsinCalculus/blob/master/figures/221/09surf_of_rotation2.py
 	# plot surface of revolution around x axis between [0, 3]
-	# best if r(t) descreases
+	# best if r(t) decreases
 
 	rad(x) = 2/(1 + exp(x))
     trange = (0, 3)
@@ -585,7 +585,7 @@ plotly()
 nothing
 ```
 
-Modification of earlier figure to show washer method. The interior volumn would be given by $\int_a^b \pi r(x)^2 dx$, the entire volume by $\int_a^b \pi R(x)^2 dx$. The difference then is the volume computed by the washer method.
+Modification of earlier figure to show washer method. The interior volume would be given by $\int_a^b \pi r(x)^2 dx$, the entire volume by $\int_a^b \pi R(x)^2 dx$. The difference then is the volume computed by the washer method.
 
 :::
 
@@ -883,7 +883,7 @@ Consider a sphere with an interior cylinder bored out of it.  (The [Napkin](http
 plt = let
 	# Follow lead of # https://github.com/SigurdAngenent/WisconsinCalculus/blob/master/figures/221/09surf_of_rotation2.py
 	# plot surface of revolution around x axis between [0, 3]
-	# best if r(t) descreases
+	# best if r(t) decreases
 
 	rad(t) = (t = clamp(t, -1, 1); sqrt(1 - t^2))
 	rad2(t) = 1/2
