--- a/quarto/integrals/volumes_slice.qmd
+++ b/quarto/integrals/volumes_slice.qmd
@@ -167,7 +167,7 @@ plt = let
     gr()
 	# Follow lead of # https://github.com/SigurdAngenent/WisconsinCalculus/blob/master/figures/221/09surf_of_rotation2.py
 	# plot surface of revolution around x axis between [0, 3]
-	# best if r(t) descreases
+	# best if r(t) decreases
 
 	rad(x) = 2/(1 + exp(x))
     trange = (0,3)
