--- a/quarto/derivatives/taylor_series_polynomials.qmd
+++ b/quarto/derivatives/taylor_series_polynomials.qmd
@@ -1,4 +1,4 @@
-# Taylor polynomials and other approximating polynomials
+# Taylor polynomials, series, and approximating polynomials
 
 
 {{< include ../_common_code.qmd >}}
@@ -241,7 +241,6 @@ This immediately applies to the above, where we parameterized by $h$: $x_0=c, x_
 
 
 A proof based on Rolle's theorem appears in the appendix.
-
 
 ## Quadratic approximations; interpolating polynomials
 
@@ -554,7 +553,7 @@ The output of `series` includes a big "Oh" term, which identifies the scale of t
 
 :::{.callout-note}
 ## Note
-A Taylor polynomial of degree $n$ consists of $n+1$ terms and an error term. The "Taylor series" is an *infinite* collection of terms, the first $n+1$ matching the Taylor polynomial of degree $n$. The fact that series are *infinite* means care must be taken when even talking about their existence, unlike a Tyalor polynomial, which is just a polynomial and exists as long as a sufficient number of derivatives are available.
+A Taylor polynomial of degree $n$ consists of $n+1$ terms and an error term. The "Taylor series" (below) is an *infinite* collection of terms, the first $n+1$ matching the Taylor polynomial of degree $n$. The fact that series are *infinite* means care must be taken when even talking about their existence, unlike a Taylor polynomial, which is just a polynomial and exists as long as a sufficient number of derivatives are available.
 
 :::
 
@@ -934,6 +933,46 @@ eqns[2]
 ```
 
 The `solve` function is used to identify $g^{(n)}$ represented in terms of lower-order derivatives of $g$. These values have been computed and stored and are then substituted into `ϕ`. Afterwards a limit is taken and the answer recorded.
+
+
+## Taylor series
+
+Recall a *power series* has the form $\sum_{n=0}^\infty a_n (x-c)^n$. Power series have a radius of convergence ($|x - c| < r$) for which the series converges and diverges when $|x-c| > r$.
+
+The Taylor polynomial formula can be extended to a formal power series with through
+
+$$
+a_n = \frac{f^{n}(c)}{n!}.
+$$
+
+If $f(x)$ is equal to the power series within the radius of convergence derivatives of $f(x)$ can be computed by term-by-term differentiation of the power series. The resulting power series will have the same radius of convergence.
+
+Consider the Taylor series for $\sin(x)$ and $\cos(x)$ about $0$:
+
+$$
+\begin{align*}
+\sin(x) &= x - \frac{x^3}{3!} + \frac{x^5}{5!} + \cdots + (-1)^k\frac{x^{2k+1}}{(2k+1)!} + \cdots ...\\
+\cos(x) &= 1 - \frac{x^2}{2!} + \frac{x^4}{4!} + \cdots + (-1)^k\frac{x^{2k}}{(2k)!} + \cdots ...\\
+\end{align*}
+$$
+
+These both have infinite radius of convergence. Differentiating the power series of $\sin(x)$ term by term gives the power series for $\cos(x)$ as
+
+$$
+\left[(-1)^k \frac{x^{2k+1}}{(2k+1)!} \right]' =
+(-1)^k \frac{(2k+1) x^{2k}}{(2k+1)!} =
+(-1)^k \frac{x^{2k}}{(2k)!}.
+$$
+
+Similarly, as the power series for $\sinh(x)$ and $\cosh(x)$ are the same as the above without the alternating signs produced by the $(-1)^k$ term, the term-by-term differentiation of the power series of $\sinh(x)$ produces $\cosh(x)$ and, in this case, vice versa.
+
+
+The power series for $e^x$ about $0$ has terms $a_k=x^k/k!$. Differentating gives $kx^{k-1}/k! = x^{k-1}/(k-1)!$. The equivalence of the power series for $e^x$ with its term-by-term differentiation requires a simple shift of indices.
+
+The power series for $1/(1-x)$ has terms $a_i = x^i$ for $i \geq 0$. The radius of convergence is $1$. Differentiating term-by-term yields a power series for $1/(1-x)^2$ is $a_i = (i+1)x^i$ for $i \geq 0$, which will have a radius of convergence of $1$ as well.
+
+There are examples (the typical one being $f(x) = e^{-1/x^2}$, defined at $0$ to be $0$) where the function has infinitely many derivatives but the power series and the function are not equal beyond a point. In this example, the function is so flat at $0$ that all its derivatives at $0$ are $0$.
+
 
 
 ## Questions
