--- a/quarto/integrals/improper_integrals.qmd
+++ b/quarto/integrals/improper_integrals.qmd
@@ -421,6 +421,125 @@ We want to just say $F'(x)= e^{-x}$ so $f(x) = e^{-x}$. But some care is needed.
 Finally, at $x=0$ we have an issue, as $F'(0)$ does not exist. The left limit of the secant line approximation is $0$, the right limit of the secant line approximation is $1$. So, we can take $f(x) = e^{-x}$ for $x > 0$ and $0$ otherwise, noting that redefining $f(x)$ at a point will not effect the integral as long as the point is finite.
 
 
+## Application to series
+
+
+In this application, we compare a series to a related integral to decide convergence or divergence of the series.
+
+:::{.callout-note appearance="minimal"}
+#### The integral test
+Consider a continuous, monotone decreasing function $f(x)$ defined on some interval of the form $[N,\infty)$. Let $a_n = f(n)$ and $s_n = \sum_{k=N}^n a_n$.
+
+* If $\int_N^\infty f(x) dx < \infty$ then the partial sums converge.
+* If $\int_N^\infty f(x) dx = \infty$ then the partial sums diverge.
+:::
+
+By the monotone nature of $f(x)$, we have on any interval of the type $[i, i+1)$ for $i$ an integer, that $f(i) \geq f(x) \geq f(i+1)$ when $x$ is in the interval. For integrals, this leads to
+
+$$
+f(i) = \int_i^{i+1} f(i) dx
+\geq \int_i^{i+1} f(x) dx
+\geq \int_i^{i+1} f(i+1) dx  = f(i+1)
+$$
+
+Now if $N$ is an integer we have
+
+$$
+\int_N^\infty f(x) dx = \sum_{i=N}^\infty \int_i^{i+1} f(x) dx
+$$
+
+This translates to this bound
+
+$$
+\sum_{i=N}^\infty f(i)
+\leq \int_N^\infty f(x) dx
+\leq \sum_{i=N}^\infty f(i+1) = \sum_{i=N+1}^\infty f(i)
+$$
+
+If the integral converges, the first inequality implies the series converges; if the integral diverges, the second inequality implies the series diverges.
+
+### Example
+
+The $p$-series test is an immediate consequence, as the integral
+
+$$
+\int_1^\infty \frac{1}{x^p} dx
+$$
+
+converges when $p>1$ and diverges when $p \leq 1$.
+
+### Example
+Let
+
+$$
+a_n = \frac{1}{n \cdot \ln(n) \cdot \ln(\ln(n))^2}
+$$
+
+Does $\sum a_n$ *converge*?
+
+We use `SymPy` to integrate:
+
+```{julia}
+@syms x::real
+f(x) = 1 / (x * log(x) * log(log(x))^2)
+integrate(f(x), (x, 3^2, oo))
+```
+
+That this is finite shows the series converges.
+
+---
+
+The integral of a power series can be computed easily for some $x$:
+
+:::{.callout-note appearance="minimal"}
+### The integral of a power series
+
+Suppose $f(x) = \sum_n a_n (x-c)^n$ is a power series about $x=c$ with radius of convergence $r > 0$. [Then](https://en.wikipedia.org/wiki/Power_series#Differentiation_and_integration) the limits of the integral and the sum can be switched around when $x$ is within the radius of convergence:
+
+$$
+\begin{align*}
+\int f(x) dx
+&= \int \sum_n a_n(x-c)^n dx\\
+&= \sum_{n=0}^\infty \int a_n(x-c)^n dx\\
+= \sum_{n=0}^\infty a_n \frac{(x-c)^{n+1}}{n+1}
+\end{align*}
+$$
+
+The radius of convergence of this new power series is also $r$.
+:::
+
+
+This geometric series has a well known value ($|r| < 1$):
+
+$$
+\frac{1}{1-r} = 1 + r + r^2 + \cdots
+$$
+
+This gives rise to
+
+$$
+\ln(1 - r) = -(r + r^2/2 + r^3/3 + \cdots).
+$$
+
+The power series for $e^x$ is
+
+$$
+e^x = \sum_{n=0}^\infty \frac{x^n}{n!}
+$$
+
+This has integral then given by
+
+$$
+\int e^x dx = \sum_{n=0}^\infty \frac{x^{n+1}}{n+1}\frac{1}{n!}
+= \sum_{n=0}^\infty \frac{x^{n+1}}{(n+1)!}
+= \sum_{n=1}^\infty \frac{x^n}{n!}
+= e^x - 1
+$$
+
+The $-1$ is just a constant so the antiderivative of $e^x$ is $e^x$.
+
+
+
 ## Questions
 
 
