--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -311,7 +311,7 @@ This progression can be seen to be increasing. Cauchy, in his treatise, can see 
 
 $$
 \begin{align*}
-(1 + \frac{1}{m})^n &= 1 + \frac{1}{1} + \frac{1}{1\cdot 2}(1 - \frac{1}{m}) +  \\
+(1 + \frac{1}{m})^m &= 1 + \frac{1}{1} + \frac{1}{1\cdot 2}(1 - \frac{1}{m}) +  \\
 & \frac{1}{1\cdot 2\cdot 3}(1 - \frac{1}{m})(1 -  \frac{2}{m}) + \cdots \\
 &+
 \frac{1}{1 \cdot 2 \cdot \cdots \cdot m}(1 - \frac{1}{m}) \cdot \cdots \cdot (1 - \frac{m-1}{m}).
