Correct 'An historic' to 'A historic' in limits.qmd

--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -18,7 +18,7 @@ using SymPy       # for symbolic limits
 ---
 
 
-An historic problem in the history of math was to find the area under the graph of $f(x)=x^2$ between $[0,1]$.
+A historic problem in the history of math was to find the area under the graph of $f(x)=x^2$ between $[0,1]$.
 
 
 There wasn't a ready-made formula for the area of this shape, as was known for a triangle or a square. However, [Archimedes](http://en.wikipedia.org/wiki/The_Quadrature_of_the_Parabola) found a method to compute areas enclosed by a parabola and line segments that cross the parabola.
