Include Julia plot for limit function
Add Julia code for plotting the limit function.

--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -1371,6 +1371,12 @@ $$
 
 The limit exists, what is the value?
 
+```{julia}
+#| hold: true
+#| echo: false
+f(x) = (cos(x) - 1)/x
+p = plot(f, -1, 1)
+```
 
 ```{julia}
 #| hold: true
